<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_overall">

    <fragment
        android:id="@+id/navigation_overall"
        android:name="com.example.aaveg2020.Scoreboard.ui.Overall.OverallFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_overall" />

    <fragment
        android:id="@+id/navigation_cultural"
        android:name="com.example.aaveg2020.Scoreboard.ui.Cultural.CulturalsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_culturals" />

    <fragment
        android:id="@+id/navigation_sports"
        android:name="com.example.aaveg2020.Scoreboard.ui.sports.SportsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_sports" />
    <fragment
        android:id="@+id/navigation_spectrum"
        android:name="com.example.aaveg2020.Scoreboard.ui.Spectrum.SpectrumFragment"
        android:label="Spectrum"
        tools:layout="@layout/fragment_spectrum"/>
</navigation>