<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/events_bg"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/event_detail_base_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/event_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/events_header_bg"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/event_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/comfortaa_bold"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:lineSpacingMultiplier="1.2"
                android:text="NOX"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4">

                <ImageView
                    android:id="@+id/event_detail_cup_img"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/spectrum_cup" />

                <TextView
                    android:id="@+id/event_detail_cup_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="Spectrum"
                    android:textColor="@color/light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.4">

                <ImageView
                    android:id="@+id/event_detail_cluster_img"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/misc_gold" />

                <TextView
                    android:id="@+id/event_detail_cluster_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="Misc"
                    android:textColor="@color/light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:paddingStart="7dp"
            android:paddingEnd="7dp">

            <TextView
                android:id="@+id/event_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum_paragraph"
                android:textColor="@color/events_text"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.5"
                android:fontFamily="@font/comfortaa"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/icon_tag"
                    android:text="@string/location_pin_icon"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="@dimen/icon_size" />

                <TextView
                    android:id="@+id/event_detail_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="LHC"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/icon_tag"
                    android:text="@string/calendar_icon"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="@dimen/icon_size" />

                <TextView
                    android:id="@+id/event_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="20/01/2020"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/icon_tag"
                    android:text="@string/time_icon"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="@dimen/icon_size" />

                <TextView
                    android:id="@+id/event_detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="5:30 pm"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_detail_rules_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:tag="@string/icon_tag"
                    android:text="@string/rules_icon"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="@dimen/icon_size" />

                <TextView
                    android:id="@+id/event_detail_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="Rules"
                    android:textColor="@color/events_text_light_yellow"
                    android:textSize="13sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:paddingStart="15dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/event_points_table_drawable_dark">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="#"
                        android:textColor="@color/events_text"
                        android:textSize="15sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:paddingStart="15dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/event_points_table_drawable_dark">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:text="Points"
                        android:textColor="@color/events_text"
                        android:textSize="15sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/event_detail_points_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>